# multimedia-gst-plugin-video-sink

./: .gitignore  AUTHORS  ChangeLog  VERSION  configure.ac  gst-plugin-aml-video-sink_1.0.bb  gst-plugin-video-sink_1.0.bb  version_config.sh
src/: Makefile.am  aml_version.h  aml_version.h.in  gstamlvideosink.c  gstamlvideosink.h  render_lib.h
test/: run.sh
